--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 body {
-  background: radial-gradient(circle at bottom, navy 0, black 100%);
+  background: #090736;
 }
 
 .geo-background {
